added index.html and style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Amazon CSS Clone</title>
 </head>
 <body>
-    
+   <div class="nav">
+    <div class="nav">
+        <div class="logo">
+            
+        </div>
+
+    </div>
+   </div>
 </body>
 </html>
